--- a/src/assets/styles/sass/output.css
+++ b/src/assets/styles/sass/output.css
@@ -11,15 +11,21 @@ body {
   left: -50vw;
   transform: rotate(-60deg);
 }
-.start-animation-container #cover1, .start-animation-container #cover2 {
+.start-animation-container #cover1, .start-animation-container #cover2, .start-animation-container #cover1bis, .start-animation-container #cover2bis {
   width: 100%;
   height: 50%;
 }
 .start-animation-container #cover1 {
-  background-color: rgb(255, 119, 119);
+  background-color: #854CFF;
 }
 .start-animation-container #cover2 {
-  background-color: rgb(200, 255, 0);
+  background-color: #854CFF;
+}
+.start-animation-container #cover1bis {
+  background-color: white;
+}
+.start-animation-container #cover2bis {
+  background-color: white;
 }
 .start-animation-container .ns-icon {
   width: 200px;
@@ -31,11 +37,16 @@ body {
 
 header {
   height: 90px;
-  background-color: #854CFF;
+  background-color: rgb(243, 116, 116);
 }
 
 .container {
   margin: 0 auto;
+}
+
+main {
+  height: 100vh;
+  background-color: rgb(112, 217, 112);
 }
 
 /*# sourceMappingURL=output.css.map */
